# Perga

./: .gitignore  CLAUDE.md  Cargo.toml  TODO.md
crates/perga-cli/: Cargo.toml
crates/perga-cli/src/: main.rs  raw_debug.rs  raw_mode.rs
crates/perga-cli/tests/: raw_debug.rs
crates/perga-core/: Cargo.toml
crates/perga-core/src/: lib.rs  profiles.rs  session_factory.rs  wire.rs
crates/perga-server/: Cargo.toml
crates/perga-server/src/: bridge.rs  error.rs  http.rs  lib.rs  main.rs  profiles.rs  wire.rs  ws.rs
crates/perga-server/tests/: lifecycle.rs  rtt.rs
crates/perga-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/perga-tauri/capabilities/: default.json
crates/perga-tauri/icons/: icon.icns  perga-icon.manifest.json
crates/perga-tauri/src/: lib.rs  main.rs  paths.rs  session_registry.rs
crates/perga-tauri/src/commands/: mod.rs  platform.rs  profiles.rs  session.rs
crates/pty/: Cargo.toml
crates/pty/src/: command.rs  config.rs  event.rs  lib.rs  session.rs  shell_inject.rs  threads.rs
crates/pty/tests/: integration.rs
crates/ssh/: Cargo.toml
crates/ssh/src/: config.rs  error.rs  handler.rs  lib.rs  session.rs  shuttle.rs
crates/terminal-engine/: Cargo.toml
crates/terminal-engine/src/: engine.rs  lib.rs  listener.rs  modes.rs  shell_integration.rs  size.rs  snapshot.rs
crates/terminal-engine/tests/: integration.rs  osc133.rs
crates/terminal-input/: Cargo.toml
crates/terminal-input/src/: encoder.rs  event.rs  lib.rs
crates/terminal-input/tests/: integration.rs
crates/terminal-protocol/: Cargo.toml
crates/terminal-protocol/src/: encoder.rs  event.rs  lib.rs
crates/terminal-protocol/tests/: integration.rs  marks.rs
crates/terminal-session/: Cargo.toml
crates/terminal-session/src/: error.rs  event_loop.rs  lib.rs  session.rs
crates/terminal-session/tests/: integration.rs
crates/transport/: Cargo.toml
crates/transport/src/: command.rs  event.rs  lib.rs  size.rs  transport.rs
docs/: cross-platform-native-client.md  frontend-dispatch-performance-plan.md  state-2026-05-18.md  state-2026-05-20.md  state-2026-05-21.md  state-2026-05-22.md  state-2026-05-23.md  state-2026-05-24.md  tui-trustworthiness.md  web-terminal-architecture.md
scripts/: perga-bash.sh  perga-zsh.sh
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: main.tsx
web/src/input/: composition.ts  copy_shortcuts.ts  keyboard.ts  mouse.ts  paste_shortcuts.ts  resize.ts  terminal_selection.ts  workspace_shortcuts.ts  zoom_shortcuts.ts
web/src/net/: index.ts  tauri.ts  transport.ts  ws.ts
web/src/render/: block_elements.ts  block_list.tsx  block_one.tsx  box_drawing.ts  fonts.ts  grid_canvas.tsx  grid_dom.tsx  history_view.tsx  metrics.ts  palette.ts  row_segments.ts  theme.ts
web/src/state/: blocks.ts  history.ts  pane_tree.ts  profiles.ts  protocol.ts  session.ts  session_store.ts  settings.ts  settings_context.ts  wire.ts  workspace.ts
web/src/ui/: app.tsx  autotest_button.tsx  host_form.tsx  modal.tsx  pane_leaf.tsx  pane_tree_view.tsx  perf_overlay.tsx  profile_picker.tsx  resize_handles.tsx  settings_panel.tsx  tab_bar.tsx  top_bar.tsx  window_chrome.tsx
web/src/util/: autotest.ts  perf.ts  platform.ts
web/tests/: autotest.spec.ts  block_elements.spec.ts  blocks.spec.ts  box_drawing.spec.ts  composition.spec.ts  copy_shortcuts.spec.ts  fonts.spec.ts  grid_canvas.spec.ts  grid_dom.spec.ts  history.spec.ts  keyboard.spec.ts  metrics.spec.ts  mouse.spec.ts  pane_leaf_ime.spec.tsx  pane_tree.spec.ts  paste_shortcuts.spec.ts  platform.spec.ts  profiles.spec.ts  resize.spec.ts  row_segments.spec.ts  session.spec.ts  settings.spec.ts  tauri_transport.spec.ts  terminal_selection.spec.ts  theme.spec.ts  top_bar.spec.ts  window_chrome.spec.ts  workspace.spec.ts  workspace_shortcuts.spec.ts  zoom_shortcuts.spec.ts
