[workspace]
resolver = "2"
members = [
    "crates/transport",
    "crates/pty",
    "crates/ssh",
    "crates/terminal-engine",
    "crates/terminal-protocol",
    "crates/terminal-input",
    "crates/terminal-session",
    "crates/perga-core",
    "crates/perga-cli",
    "crates/perga-server",
]
# 不设 default-members:`cargo test` 默认覆盖全 workspace,避免静默跳测试。
# 跑 perga-cli 用 `cargo run -p perga-cli`,跑 server 用 `cargo run -p perga-server`。

[workspace.package]
edition = "2021"
version = "0.1.0"
publish = false

[workspace.dependencies]
portable-pty = "0.8"
crossbeam-channel = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
nix = { version = "0.29", features = ["term", "signal"] }
signal-hook = "0.3"
libc = "0.2"
alacritty_terminal = { version = "0.25", default-features = false }
vte = "0.15"
bitflags = "2"
parking_lot = "0.12"
unicode-width = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
# Server side-pool tokio runtime;只在 perga-server crate 内激活,
# 主 PTY / engine 路径仍是 sync + crossbeam(见 CLAUDE.md §运行时模型)。
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "signal", "time"] }
axum = { version = "0.7", features = ["ws"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
# SSH backend(crates/ssh)。russh 0.61 已合并 keys 子 crate。
russh = "0.61"
toml = "0.8"

[workspace.lints.clippy]
unwrap_used = "deny"
dbg_macro = "deny"
todo = "deny"
