[package]
name = "perga-cli"
edition.workspace = true
version.workspace = true
publish.workspace = true

[[bin]]
name = "perga"
path = "src/main.rs"

[dependencies]
pty = { path = "../pty" }
crossbeam-channel.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
nix = { workspace = true, features = ["term", "signal", "fs", "poll"] }
signal-hook.workspace = true

[lints]
workspace = true
