[package]
name = "perga-cli"
edition.workspace = true
version.workspace = true
publish.workspace = true

[[bin]]
name = "perga"
path = "src/main.rs"

[dependencies]
pty = { path = "../pty" }
terminal-engine = { path = "../terminal-engine" }
terminal-protocol = { path = "../terminal-protocol" }
crossbeam-channel.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
nix = { workspace = true, features = ["term", "signal", "fs", "poll"] }
signal-hook.workspace = true

[lints]
workspace = true
