[package]
name = "perga-cli"
edition.workspace = true
version.workspace = true
publish.workspace = true

[[bin]]
name = "perga"
path = "src/main.rs"

[[bin]]
name = "perga-bench"
path = "src/bin/bench.rs"

[[bin]]
name = "perga-ssh-probe"
path = "src/bin/ssh_probe.rs"

[dependencies]
transport = { path = "../transport" }
pty = { path = "../pty" }
ssh = { path = "../ssh" }
terminal-engine = { path = "../terminal-engine" }
terminal-protocol = { path = "../terminal-protocol" }
crossbeam-channel.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
nix = { workspace = true, features = ["term", "signal", "fs", "poll"] }
signal-hook.workspace = true

[lints]
workspace = true
