[package]
name = "perga-server"
edition.workspace = true
version.workspace = true
publish.workspace = true

[[bin]]
name = "perga-server"
path = "src/main.rs"

[dependencies]
# 协议无关核心:host profile、ClientMessage wire、session 工厂。
perga-core = { path = "../perga-core" }

# Server 仍直接拿这几个类型(WS 处理 / SessionParams 等签名直接用)。
transport = { path = "../transport" }
terminal-protocol = { path = "../terminal-protocol" }
terminal-session = { path = "../terminal-session" }

# Async transport(side-pool tokio runtime,见 CLAUDE.md §运行时模型)。
tokio.workspace = true
axum.workspace = true
futures-util.workspace = true

# Sync↔async 桥需要 crossbeam Receiver 端的类型。
crossbeam-channel.workspace = true

# 序列化 / 反序列化。
serde.workspace = true
serde_json.workspace = true

thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
# 集成测试:作为 WS 客户端连测试用 server。
tokio-tungstenite.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "net", "time", "io-util"] }
# profiles 单测用临时 toml 文件,不污染 ~/.perga/hosts.toml。
tempfile.workspace = true

[lints]
workspace = true
