[package]
name = "pty"
edition.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
portable-pty.workspace = true
crossbeam-channel.workspace = true
tracing.workspace = true
thiserror.workspace = true
libc.workspace = true

[dev-dependencies]
# shell 注入测试用隔离临时目录,不碰真实 ~/.perga。
tempfile.workspace = true

[lints]
workspace = true
