[package]
name = "terminal-engine"
edition.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
alacritty_terminal.workspace = true
vte.workspace = true
bitflags.workspace = true
parking_lot.workspace = true
tracing.workspace = true

[dev-dependencies]
unicode-width.workspace = true

[lints]
workspace = true
