[package]
name = "terminal-engine"
edition.workspace = true
version.workspace = true
publish.workspace = true

[features]
# CellAttrs(bitflags)走自实现 Serialize,所以**不**开 `bitflags/serde` ──
# 那个 feature 会把 bitflags 序列化成 "BOLD | ITALIC" 这样的 human-readable
# 字符串,作为前端协议不够显式稳定。
serde = ["dep:serde"]

[dependencies]
alacritty_terminal.workspace = true
vte.workspace = true
bitflags.workspace = true
parking_lot.workspace = true
tracing.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]
unicode-width.workspace = true

[lints]
workspace = true
